syntax = "proto3";

package pb;
option go_package = "/;pb";

message CommonChat{
  string Content = 1;
}